code refactor, overflow issue fix

--- a/app/scss/_slider.scss
+++ b/app/scss/_slider.scss
@@ -3,6 +3,7 @@
 .slider {
     max-width: $image-width;
     margin: 0 auto;
+    overflow: hidden;
 }
 .slider__images-container {
     position: relative;
